--- a/app/src/main/res/layout/row_post.xml
+++ b/app/src/main/res/layout/row_post.xml
@@ -92,13 +92,28 @@
             android:background="@color/white">
         </ImageView>
 
-        <TextView
-            android:id="@+id/postLikeTv"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="10 Like"
-            android:textColor="@color/lavender">
-        </TextView>
+            android:layout_margin="5dp"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/postLikeTv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="10 Like"
+                android:textColor="@color/lavender"></TextView>
+            <TextView
+                android:id="@+id/pCommentsTv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="10 Comments"
+                android:layout_weight="1"
+                android:textAlignment="textEnd"
+                android:gravity="end"
+                android:textColor="@color/lavender"></TextView>
+        </LinearLayout>
 
         <View
             android:layout_width="match_parent"
