--- a/app/src/main/res/layout/row_post.xml
+++ b/app/src/main/res/layout/row_post.xml
@@ -131,6 +131,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:textSize="12sp"
                 android:drawableLeft="@drawable/like"
                 android:drawablePadding="5dp"
                 android:backgroundTint="#A89E9E"
@@ -142,6 +143,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:textSize="12sp"
                 android:drawableLeft="@drawable/comment"
                 android:drawablePadding="5dp"
                 android:backgroundTint="#A89E9E"
@@ -153,6 +155,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:textSize="12sp"
                 android:drawableLeft="@drawable/share"
                 android:drawablePadding="5dp"
                 android:backgroundTint="#A89E9E"
