--- a/app/src/main/res/layout/row_chat_left.xml
+++ b/app/src/main/res/layout/row_chat_left.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical"
     android:padding="10dp">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -26,11 +26,23 @@
             android:textColor="@color/black"
             android:background="@drawable/bg_receiver"
             android:padding="16dp"
+            android:layout_marginLeft="50dp"
             android:text="His message"
+            android:visibility="gone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
-    </LinearLayout>
+        <ImageView
+            android:id="@+id/messageIv"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:adjustViewBounds="true"
+            android:layout_marginLeft="50dp"
+            android:src="@drawable/baseline_image_24"
+            android:scaleType="fitCenter"
+            android:background="@drawable/bg_receiver"/>
+
+    </RelativeLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
