--- a/app/src/main/res/layout/row_chat_right.xml
+++ b/app/src/main/res/layout/row_chat_right.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:padding="10dp">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:id="@+id/messageLayout">
+
         <TextView
             android:id="@+id/messageTv"
             android:layout_weight="1"
@@ -19,8 +21,23 @@
             android:background="@drawable/bg_sender"
             android:padding="16dp"
             android:text="His message"
+            android:layout_alignParentEnd="true"
+            android:layout_toEndOf="@id/timeTv"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            tools:ignore="NotSibling" />
+
+        <ImageView
+            android:id="@+id/messageIv"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:adjustViewBounds="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:padding="15dp"
+            android:src="@drawable/baseline_image_24"
+            android:scaleType="fitCenter"
+            android:background="@drawable/bg_sender"/>
 
         <com.mikhaellopez.circularimageview.CircularImageView
             android:layout_width="50dp"
@@ -30,7 +47,8 @@
             android:visibility="gone"
             android:src="@drawable/baseline_account_circle_24"/>
 
-    </LinearLayout>
+    </RelativeLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
