--- a/app/src/main/res/layout/row_chat_left.xml
+++ b/app/src/main/res/layout/row_chat_left.xml
@@ -4,13 +4,13 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
+    android:id="@+id/messageLayout"
     android:padding="10dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:id="@+id/messageLayout">
+        android:orientation="horizontal">
 
         <com.mikhaellopez.circularimageview.CircularImageView
             android:layout_width="50dp"
@@ -21,16 +21,26 @@
 
         <TextView
             android:id="@+id/messageTv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:textSize="15sp"
-            android:textColor="@color/black"
             android:background="@drawable/bg_receiver"
             android:padding="16dp"
             android:layout_marginLeft="50dp"
             android:text="His message"
             android:visibility="gone"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:textColor="@color/black"
+            android:textSize="15sp" />
+
+        <ImageView
+            android:id="@+id/messageIv"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:adjustViewBounds="true"
+            android:background="@drawable/bg_receiver"
+            android:padding="15dp"
+            android:scaleType="fitCenter"
+            android:src="@drawable/ic_image" />
 
         <ImageView
             android:id="@+id/messageIv"
