--- a/app/src/main/res/layout/fragment_group_chat.xml
+++ b/app/src/main/res/layout/fragment_group_chat.xml
@@ -1,16 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".GroupChatFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".GroupChatFragment"
+    android:background="@color/white">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Group Chat"
-        android:textSize="30dp"
-        android:gravity="center"/>
+   <LinearLayout
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:orientation="horizontal"
+       android:weightSum="10">
 
-</FrameLayout>
+      <EditText
+          android:id="@+id/edtSearch"
+          android:layout_width="wrap_content"
+          android:layout_height="60dp"
+          android:layout_weight="9"
+          />
+      <ImageButton
+          android:layout_width="30dp"
+          android:layout_height="50dp"
+          android:padding="10dp"
+          android:layout_marginTop="10dp"
+          android:gravity="center"
+          android:layout_weight="1"
+          android:background="#ffffff"
+          android:scaleType="fitXY"
+          android:src="@drawable/search"/>
+   </LinearLayout>
+
+   <androidx.recyclerview.widget.RecyclerView
+       android:id="@+id/groupRv"
+       android:layout_width="match_parent"
+       android:layout_height="match_parent"
+       android:layout_marginTop="70dp"
+       tools:listitem="@layout/row_groupchat"
+       app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+
+</RelativeLayout>
