--- a/app/src/main/res/layout/fragment_option.xml
+++ b/app/src/main/res/layout/fragment_option.xml
@@ -8,13 +8,16 @@
     android:orientation="vertical">
 
     <!-- TODO: Update blank fragment layout -->
-    <Button
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Logout"
-        android:layout_gravity="center"
-        android:textSize="30dp"
-        android:gravity="center" />
+        android:text="Option"
+        android:textStyle="bold"
+        android:gravity="center"
+        android:textSize="35dp"
+        android:background="@color/lavender"
+        android:layout_marginBottom="20dp"
+        />
 
     <androidx.appcompat.widget.SwitchCompat
         android:id="@+id/switchNightMode"
