--- a/app/src/main/res/layout/activity_group_chat.xml
+++ b/app/src/main/res/layout/activity_group_chat.xml
@@ -17,6 +17,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:weightSum="1"
         android:orientation="horizontal">
 
         <com.mikhaellopez.circularimageview.CircularImageView
@@ -26,16 +27,27 @@
             android:scaleType="centerCrop"
             android:src="@drawable/baseline_groups_24"/>
 
-            <TextView
+        <TextView
                 android:id="@+id/groupTitleTv"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Group Title"
                 android:layout_gravity="center_vertical"
                 android:textColor="@color/white"
                 android:textSize="20sp"
                 android:layout_marginStart="20dp"
+                android:layout_weight="0.7"
                 android:textStyle="bold"/>
+        <ImageButton
+            android:id="@+id/addBtn"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_gravity="center_vertical"
+            android:backgroundTint="@color/lavender"
+            android:layout_weight="0.1"
+            android:layout_marginEnd="40dp"
+            android:src="@drawable/ic_addperson"
+            />
     </LinearLayout>
     </androidx.appcompat.widget.Toolbar>
     <androidx.recyclerview.widget.RecyclerView
