--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -17,48 +17,59 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-        <com.mikhaellopez.circularimageview.CircularImageView
-            android:id="@+id/profileIv"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/baseline_account_circle_24"/>
+            <com.mikhaellopez.circularimageview.CircularImageView
+                android:id="@+id/profileIv"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/baseline_account_circle_24"/>
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:gravity="center"
-            android:layout_weight="1"
-            android:layout_marginStart="20dp">
-
-            <TextView
-                android:id="@+id/nameTv"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Name"
-                android:layout_gravity="start"
-                android:textColor="@color/white"
-                android:textSize="20sp"
-                android:textStyle="bold"/>
+                android:orientation="vertical"
+                android:gravity="center"
+                android:layout_weight="1"
+                android:layout_marginStart="20dp">
 
-            <TextView
-                android:id="@+id/userStatusTv"
-                android:layout_width="wrap_content"
-                android:layout_gravity="start"
-                android:layout_height="wrap_content"
-                android:text="Online"
-                android:textColor="@color/white"
-                android:textSize="12sp"
-                />
-        </LinearLayout>
-            <ImageView
-                android:id="@+id/blockIv"
+                <TextView
+                    android:id="@+id/nameTv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Name"
+                    android:layout_gravity="start"
+                    android:textColor="@color/white"
+                    android:textSize="20sp"
+                    android:textStyle="bold"/>
+
+                <TextView
+                    android:id="@+id/userStatusTv"
+                    android:layout_width="wrap_content"
+                    android:layout_gravity="start"
+                    android:layout_height="wrap_content"
+                    android:text="Online"
+                    android:textColor="@color/white"
+                    android:textSize="12sp"
+                    />
+            </LinearLayout>
+
+            <ImageButton
+                android:id="@+id/duoIv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="5dp"
+                android:background="@color/lavender"
                 android:layout_gravity="center_vertical"
-                android:src="@drawable/ic_unblocked"/>
+                android:src="@drawable/baseline_duo_24"/>
+
+            <ImageButton
+                android:id="@+id/moreIv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="5dp"
+                android:background="@color/lavender"
+                android:layout_gravity="center_vertical"
+                android:src="@drawable/baseline_more_vert_24"/>
         </LinearLayout>
 
     </androidx.appcompat.widget.Toolbar>
@@ -113,9 +124,4 @@
             android:layout_marginStart="5dp"/>
 
     </LinearLayout>
-
-
-
-
-
 </RelativeLayout>
