--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -16,7 +16,6 @@
             android:padding="10dp"
             android:background="@drawable/editextstyle"
             android:layout_margin="10dp">
-
         </EditText>
     </LinearLayout>
 
@@ -24,6 +23,7 @@
         android:id="@+id/postRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/white"
         android:layout_marginTop="70dp">
     </androidx.recyclerview.widget.RecyclerView>
 
