--- a/app/src/main/res/layout/activity_calling.xml
+++ b/app/src/main/res/layout/activity_calling.xml
@@ -64,7 +64,7 @@
                 android:layout_width="70dp"
                 android:layout_height="70dp"
                 android:layout_marginLeft="80dp"
-                android:src="@drawable/mute"
+                android:src="@drawable/unmute"
                 android:scaleType="fitXY">
             </ImageView>
         </LinearLayout>
