--- a/app/src/main/res/layout/row_groupchat_left.xml
+++ b/app/src/main/res/layout/row_groupchat_left.xml
@@ -6,42 +6,47 @@
     android:layout_marginEnd="10dp"
     android:layout_marginTop="10dp"
     android:padding="10dp">
-    <TextView
-        android:id="@+id/nameTv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:textColor="@color/lavender"
-        android:text="Name"
-        android:textStyle="bold"/>
-    <TextView
-        android:id="@+id/messageTv"
-        android:layout_below="@id/nameTv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:layout_marginBottom="5dp"
-        android:textColor="@color/black"
-        android:text="The message" />
+    <RelativeLayout
+        android:id="@+id/messageLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/nameTv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:textColor="@color/lavender"
+            android:text="Name"
+            android:textStyle="bold"/>
+        <TextView
+            android:id="@+id/messageTv"
+            android:layout_below="@id/nameTv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:layout_marginBottom="5dp"
+            android:textColor="@color/black"
+            android:text="The message" />
 
-    <ImageView
-        android:id="@+id/messageIv"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_marginStart="5dp"
-        android:layout_below="@+id/messageTv"
-        android:src="@drawable/baseline_image_24"
-        android:scaleType="centerCrop"
-        android:background="@drawable/bg_receiver"/>
-    <TextView
-        android:id="@+id/timeTv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:text="Time"
-        android:layout_below="@id/messageIv"
-        android:layout_marginEnd="5dp"
-        android:textSize="12sp"/>
+        <ImageView
+            android:id="@+id/messageIv"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_marginStart="5dp"
+            android:layout_below="@+id/messageTv"
+            android:src="@drawable/baseline_image_24"
+            android:scaleType="centerCrop"
+            android:background="@drawable/bg_receiver"/>
+        <TextView
+            android:id="@+id/timeTv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:text="Time"
+            android:layout_below="@id/messageIv"
+            android:layout_marginEnd="5dp"
+            android:textSize="12sp"/>
 
+    </RelativeLayout>
 
 </RelativeLayout>
